[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/entities/player/subscenes/arm/projectile.gd" type="Script" id=1]
[ext_resource path="res://scenes/entities/player/subscenes/arm/particle_material.tres" type="Material" id=2]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.619608, 0.631373, 0.690196, 1 )

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )
size = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.05, 0.05, 0.05 )

[sub_resource type="QuadMesh" id=4]
material = ExtResource( 2 )
size = Vector2( 0.25, 0.25 )

[node name="projectile" type="Area" groups=[
"projectile",
]]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="death_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="death_particles" type="CPUParticles" parent="."]
emitting = false
amount = 64
lifetime = 0.5
one_shot = true
explosiveness = 1.0
mesh = SubResource( 4 )
flag_rotate_y = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 4.0
angular_velocity = 16.0
angular_velocity_random = 1.0
radial_accel = 16.0
radial_accel_random = 1.0
angle = 16.0
angle_random = 1.0

[connection signal="body_entered" from="." to="." method="_on_projectile_body_entered"]
[connection signal="timeout" from="death_timer" to="." method="_on_life_timeout"]
